--- a/index.html
+++ b/index.html
@@ -1,16 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Прикладне програмування мовою Python</h1>
-  <ul>
-    <li>
-      <a href="./SP_01__LL.html">Лекція 1</a>
-    </li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Discipline of Programming</title>
+    <style>
+      body {
+        font-family: "Segoe UI", sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+        color: #333;
+      }
+      header {
+        background-color: #222;
+        color: #fff;
+        padding: 60px 20px;
+        text-align: center;
+      }
+      header h1 {
+        margin: 0;
+        font-size: 2.8em;
+      }
+      header p {
+        font-size: 1.2em;
+        margin-top: 10px;
+      }
+      section {
+        padding: 40px 20px;
+        max-width: 900px;
+        margin: auto;
+      }
+      h2 {
+        color: #222;
+      }
+      ul {
+        padding-left: 20px;
+      }
+      footer {
+        background-color: #222;
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+        font-size: 0.9em;
+      }
+      .cta-button {
+        display: inline-block;
+        padding: 12px 24px;
+        background-color: #008cba;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        margin-top: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>ПРИКЛАДНЕ ПРОГРАМУВАННЯ МОВОЮ Python</h1>
+      <p>Where logic meets creativity, and code becomes art.</p>
+    </header>
+
+    <section>
+      <h2>What You’ll Discover</h2>
+      <ul>
+        <li>
+          Fundamentals of machine learning—data collection, preprocessing, and
+          model selection with a focus on rigor and reproducibility
+        </li>
+        <li>
+          Designing clean, maintainable ML code with version control, modular
+          pipelines, and ethical safeguards
+        </li>
+        <li>
+          Structured experimentation: tracking performance metrics, handling
+          overfitting, and interpreting results scientifically
+        </li>
+        <li>
+          Deploying models responsibly with emphasis on transparency,
+          scalability, and lifecycle management
+        </li>
+        <li>
+          Collaborating in ML environments—code reviews, data governance, and
+          effective documentation practices
+        </li>
+      </ul>
+
+      <h2>Why It Matters</h2>
+      <p>
+        In machine learning, disciplined practices are the difference between
+        intuition and insight. Clean data pipelines, reproducible experiments,
+        and ethical rigor turn noisy datasets into meaningful models. This
+        discipline isn’t just academic—it’s essential to building trustworthy
+        systems that can adapt, scale, and make a real-world impact.
+      </p>
+
+      <h2>Lessons</h2>
+      <a href="./SP_01__LL.html" class="cta-button">Лекція 1</a>
+    </section>
+
+    <footer>
+      &copy; 2025 Applied programming discipline. All rights reserved.
+    </footer>
+  </body>
 </html>
