--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discipline of Programming</title>
+    <title>Applied programming discipline</title>
     <style>
       body {
         font-family: "Segoe UI", sans-serif;
@@ -57,7 +57,7 @@
   </head>
   <body>
     <header>
-      <h1>ПРИКЛАДНЕ ПРОГРАМУВАННЯ МОВОЮ Python</h1>
+      <h1>Прикладне програмування мовою Python</h1>
       <p>Where logic meets creativity, and code becomes art.</p>
     </header>
 
@@ -65,7 +65,7 @@
       <h2>What You’ll Discover</h2>
       <ul>
         <li>
-          Fundamentals of machine learning—data collection, preprocessing, and
+          Fundamentals of machine learning-data collection, preprocessing, and
           model selection with a focus on rigor and reproducibility
         </li>
         <li>
@@ -81,7 +81,7 @@
           scalability, and lifecycle management
         </li>
         <li>
-          Collaborating in ML environments—code reviews, data governance, and
+          Collaborating in ML environments-code reviews, data governance, and
           effective documentation practices
         </li>
       </ul>
