--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
       <h2>Lessons</h2>
       <a href="./SP_01__LL.html" class="cta-button">Лекція 1</a>
+      <a href="./SP_02__GL.html" class="cta-button">Групове заняття 1</a>
     </section>
 
     <footer>
