Add 03_PL fix bug

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h2>Lessons</h2>
       <a href="./SP_01__LL.html" class="cta-button">Лекція 1</a>
       <a href="./SP_02__GL.html" class="cta-button">Групове заняття 1</a>
-      <a href="./SP_03__ЗL.html" class="cta-button">Практичне заняття 1</a>
+      <a href="./SP_03__PL.html" class="cta-button">Практичне заняття 1</a>
     </section>
 
     <footer>
