Add 04_GL, 05_PL

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
       <a href="./SP_01__LL.html" class="cta-button">Лекція 1</a>
       <a href="./SP_02__GL.html" class="cta-button">Групове заняття 1</a>
       <a href="./SP_03__PL.html" class="cta-button">Практичне заняття 1</a>
+      <a href="./SP_03__PL.html" class="cta-button">Практичне заняття 1</a>
+      <a href="./SP_04__GL.html" class="cta-button">Групове заняття 2</a>
+      <a href="./SP_05__PL.html" class="cta-button">Практичне заняття 2</a>
     </section>
 
     <footer>
